@@ -790,6 +790,9 @@ static gint key_press(guint keyval)
 {
   guint richting=0,level=gcomprisBoard->level;
 
+  if(board_paused)
+    return TRUE;
+
   if (threeDactive) return key_press_3D(keyval);
 
   switch (keyval)
