@@ -2,6 +2,9 @@
 
 	* src/gcompris/bonus.c: now hide the bar.
 	* src/boards/shapegame.c: implemented pause. fixed set locale bug.
+	* src/boards/draw.c: implemented pause
+	* src/boards/maze.c: implemented pause
+	* src/railroad.c: implemented pause
 	
 2003-11-29  Bruno coudoin  <bruno.coudoin@free.fr>
 
